--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,7 +3,14 @@
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Walter Turncoat', cursive;
 
-h1, h2, h3, ul, li {
+
+$primaryColor: #03697c;
+$secondaryColor: #474bb5;
+$tertiaryColor: #044779;
+$textColor: #f3faff;
+$accentColor: #08fded;
+
+h1, h2, h3, ul, li, p {
     margin: 0;
     padding: 0;
 }
@@ -25,7 +32,7 @@ img {
 
 button {
     border: none;
-    background-color: #08fded;
+    background-color: $accentColor;
     font-family: 'Walter Turncoat', cursive;
     font-size: 25.4px;
     line-height: 41.6px;
@@ -33,6 +40,7 @@ button {
     padding: 10px 15px;
     width: 34%;
     white-space: nowrap;
+    color: $secondaryColor;
 }
 
 .mainWrapper {
@@ -45,7 +53,7 @@ header {
     background-image: url("../assets/home-header.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    color: #f3faff;
+    color: $textColor;
     height: 100vh;
     // display: flex;
     
@@ -74,7 +82,7 @@ header {
                 
 
                 li a {
-                   color:#f3faff;
+                   color: $textColor;
                    font-family: 'Roboto', sans-serif;
                    font-size: 20px;
                    line-height: 29px;
@@ -107,10 +115,10 @@ header {
 }
 
 .fourLinks {
-    padding-top: 15%;
+    padding: 15% 0 5% 0;
     width: 100%;
-    background-color: #03697c;
-    color: #f3faff;
+    background-color: $primaryColor;
+    color: $textColor;
 
     .mainWrapper {
         display: flex;
@@ -126,7 +134,7 @@ header {
                 // border: 2px solid red;
                 font-size: 35px;
                 border-radius: 50%;
-                background-color: #08fded;
+                background-color: $accentColor;
                 padding: 2%;
                 color: #044779;
             }
@@ -144,13 +152,15 @@ header {
                         font-family: 'Walter Turncoat', cursive;
                         font-size: 45px;
                         line-height: 99.8px;
-                        text-transform: uppercase;
+                        // text-transform: uppercase;
                     }
                 }
 
                 p {
                     padding-left: 13%;
+                    font-family: 'Roboto', sans-serif;
                     font-size: 20px;
+                    line-height: 28px;
                 }
             }
         }
@@ -159,9 +169,9 @@ header {
 
 .quadrantSection {
     width: 100%;
-    background-color: #474bb5;
+    background-color: $secondaryColor;
     font-family: 'Roboto', sans-serif;
-    color: #f3faff;
+    color: $textColor;
 
     .mainWrapper {
         display: flex;
@@ -190,7 +200,10 @@ header {
                 }
 
                 p {
-                   font-size: 20px; 
+                   font-family: 'Roboto', sans-serif;
+                   font-size: 20px;
+                   line-height: 28px;
+                   padding: 5% 0;
                 }
             }
         }
@@ -218,11 +231,129 @@ header {
                 }
 
                 p {
-                   font-size: 20px; 
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 20px;
+                    line-height: 28px;
+                    padding: 5% 0;
                 }
             }
         }
     }
+}
+
+
+.roadTripsSection {
+    width: 100%;
+    background-color: $primaryColor;
+    color: $textColor;
+    padding: 13% 5% 8% 5%;
+
+    .mainWrapper {
+        display: flex;
+        justify-content: center;
+
+        .roadTripsContent {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            h2 {
+                font-size: 40px;
+            }
+
+            p {
+                font-family: 'Roboto', sans-serif;
+                font-size: 20px;
+                line-height: 28px;
+                padding: 5% 0;
+            }
+
+            button {
+                width: 25%;
+            }
+
+        }
+    }
+}
+
+.swimmingImg {
+    width: 100%;
+    height: 70vh;
+    background-image: url("../assets/banner.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.eventsSection {
+    width: 100%;
+    background-color: $primaryColor;
+    padding: 10% 0 5% 0;
+
+    .mainWrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .eventsImg {
+            width: 30%;
+        }
+
+        .eventsContent {
+            width: 60%;
+            display: flex;
+            flex-direction: column;
+            color: $textColor;
+
+            h2 {
+                font-size: 40px;
+                font-family: 'Walter Turncoat', cursive;
+            }
+
+            p {
+                font-family: 'Roboto', sans-serif;
+                font-size: 20px;
+                line-height: 28px;
+                padding: 5% 0;
+            }
+
+            button {
+                width: 30%;
+            }
+        }
+    }
+}
+
+.gallerySection {
+    width: 100%;
+    background-color: $secondaryColor;
+    padding: 5% 0;
+
+    .mainWrapper {
+        // display: flex;
+        // justify-content: center;
+
+        .galleryContainer {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
+
+            .galleryItem {
+                width: 31%;
+            }
+        }
+    }
+}
+
+footer {
+    width: 100%;
+    background-color: $tertiaryColor;
+    color: $textColor;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    line-height: 28px;
+    padding: 10px 0;
 }
 
 // challenge pushing image out of container. Solved by removing width: 50% from its parent. width 50% for its sibling is enough.
