--- a/partials/_blog.scss
+++ b/partials/_blog.scss
@@ -40,6 +40,12 @@ header {
                    line-height: 29px;
                    letter-spacing: 1px;
                 }
+
+                li a:hover {
+                    padding-bottom: 5px;
+                    border-bottom: 2px solid $accentColor;
+                }
+                
             }
 
             .blogHeaderTitle {
@@ -65,11 +71,11 @@ header {
 .blogSection {
     width: 100%;
     background-color: $primaryColor;
-    padding: 6% 0 5% 0;
+    padding: 6% 0 1% 0;
     color: $textColor;
     display: flex;
-        justify-content: space-between;
-        max-width: 100%;
+    justify-content: space-between;
+    max-width: 100%;
 
     // .mainWrapper {
     //     display: flex;
@@ -109,9 +115,7 @@ header {
                 }
 
                 p, li {
-                   font-family: 'Roboto', sans-serif;
-                   font-size: 20px;
-                   line-height: 28px;
+                   @include pStyles;
                 }
 
                 // li {
@@ -136,10 +140,10 @@ header {
             }
 
             .activitiesText {
-                padding: 5% 0 10% 10%;
+                padding: 5% 5% 10% 10%;
                 border-left: 5px solid $accentColor;
                 border-bottom: 5px solid $accentColor;
-                padding-right: 5%;
+                // padding-right: 5%;
                 margin-left: 1.6%;
 
                 * {
@@ -148,16 +152,111 @@ header {
 
                 h2 {
                     font-family: 'Walter Turncoat', cursive;
-                    font-size: 48px;
+                    font-size: 80px;
+                    font-weight: 100;
                 }
 
                 p {
-                    font-family: 'Roboto', sans-serif;
-                    font-size: 20px;
-                    line-height: 28px;
+                    @include pStyles;
                 } 
             }
         }
     // }
 }
 
+.commentsSection {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    // justify-content: flex-end;
+    align-items: flex-end;
+    background-color: $primaryColor;
+
+    .commentsContainer {
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        // border: 2px solid red;
+        padding: 0 4% 5% 7.5%;
+        color: $textColor;
+
+        h2 {
+            font-family: 'Walter Turncoat', cursive;
+            font-size: 80px;
+            font-weight: 100;
+            margin-bottom: 2%;
+        }
+
+        .commentItem {
+            display: flex;
+            justify-content: space-between;
+            // border: 2px solid yellow;
+            
+
+            .commentImg {
+                width: 13%; 
+            }
+
+            .commentPost {
+                display: flex;
+                flex-direction: column;
+                width: 81%;
+
+                h3 {
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 24px;
+                    line-height: 28px;
+                    font-style: italic;
+                    font-weight: bold;
+                    margin-bottom: 1%;
+                    
+                }
+                
+                p {
+                    @include pStyles;
+                }
+
+            }
+        }
+
+        .commentItem.first {
+            margin-bottom: 15%;
+        }
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        // align-items: flex-start;
+        width: 60%;
+        border: 2px solid yellow;
+
+        .formFields {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            input[type="text"] {
+                width: 45%;
+                // display: inline-block;
+            }
+
+            input[type="email"] {
+                width: 45%;
+                // display: inline-block;
+            }
+
+        }
+    }
+}
+
+footer {
+    width: 100%;
+    background-color: $tertiaryColor;
+    color: $textColor;
+    text-align: center;
+    @include pStyles;
+    padding: 10px 0;
+}
+
+// compelled to get minute details right
