--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -24,6 +24,15 @@ header {
                 display: flex;
                 align-items: center;
                 padding-top: 5%;
+                
+
+                ul {
+
+                    li a:hover {
+                        padding-bottom: 5px;
+                        border-bottom: 2px solid $accentColor;
+                    }
+                }
             }
 
             .headerNav ul {
